Use my google api key.

--- a/Project_Code_5_BeingStylish.html
+++ b/Project_Code_5_BeingStylish.html
@@ -165,7 +165,7 @@
         // mouses over the marker.
         var highlightedIcon = makeMarkerIcon('FFFF24');
 
-        var largeInfowindow = new google.maps.InfoWindow();
+        // var largeInfowindow = new google.maps.InfoWindow();
         // The following group uses the location array to create an array of markers on initialize.
         for (var i = 0; i < locations.length; i++) {
           // Get the position from the location array.
@@ -251,7 +251,7 @@
 
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?key=MYAPIKEY&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?key=AIzaSyCK5iKaFCJScre3_9LzXHa2uxu3dEPivfM&v=3&callback=initMap">
     </script>
 
   </body>
