--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
   <body>
     <div class="container">
       <div class="options-box">
-        <h1>Find Your Fun in Melbourne</h1>
+        <h1>Visit to Melbourne</h1>
         <div>
           <input id="show-listings" type="button" value="Show Listings">
           <input id="hide-listings" type="button" value="Hide Listings">
+          <hr>
+          <span class="text">Draw a shape to search within it!</span>
+          <input id="toggle-drawing"  type="button" value="Drawing Tools">
         </div>
       </div>
       <div id="map"></div>
@@ -17,7 +20,7 @@
     <script src='../js/main.js'></script>
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?key=AIzaSyCK5iKaFCJScre3_9LzXHa2uxu3dEPivfM&libraries=geometry&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyCK5iKaFCJScre3_9LzXHa2uxu3dEPivfM&v=3&callback=initMap">
     </script>
   </body>
 </html>
