--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div id="main">
-    <h2><span id='openIcon' style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;  </span>Ula's Melbourne Map</h2>
+    <h2><span id='openIcon' style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;  </span>Ula's Melbourne Map <span id='weather' style="float: right;"></span></h2>
     <div id="map"></div>
 
   </div>
